[project]
name = "winzy-txt2img-val-town"
version = "0.0.1"
description = "Text to Image Gen Using Val Town's imggenurl "
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
    "requests",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-txt2img-val-town"
Changelog = "https://github.com/sukhbinder/winzy-txt2img-val-town/releases"
Issues = "https://github.com/sukhbinder/winzy-txt2img-val-town/issues"
CI = "https://github.com/sukhbinder/winzy-txt2img-val-town/actions"

[project.entry-points."winzy.plugins"]
t2i = "winzy_txt2img_val_town:t2i_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
